FIX: blg_card-teaser > wrong margin classes

--- a/src/scss/builder/modules-global/blg_card-teaser.scss
+++ b/src/scss/builder/modules-global/blg_card-teaser.scss
@@ -5,24 +5,7 @@
       position: relative;
       flex: 0 0 100%;
       max-width: 100%;
-
-      &--light {
-         background-color: $c-white;
-      }
-
-      .btn {
-         @include media-breakpoint-up(sm) {
-            position: absolute;
-            bottom: 0;
-            left: 3rem;
-            transform: translateY(50%);
-         }
-
-         @include media-breakpoint-up(md) {
-            left: auto;
-            right: 3rem;
-         }
-      }
+      color: $c-white;
    }
 
    &__heading {
